# xindawn-android-airplay-mirroring-sdk-AndroidStudio-64

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xindawn/: RenderApplication.java
app/src/main/java/com/xindawn/center/: MediaRenderProxy.java
jniinterface/: build.gradle
jniinterface/src/main/cpp/jniinterface/: CMakeLists.txt  com_xindawn_jni_PlatinumJniProxy.cpp
sdk/inc/: mediaserver.h
